--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=7023c0c84c494d369b3b",
+    "/css/app.css": "/css/app.css?id=53a0100d72488416776c"
 }
